fix text alignment on badges

--- a/src/assets/styles/card.css
+++ b/src/assets/styles/card.css
@@ -79,7 +79,6 @@ button.expand{
   z-index:inherit;
   background: #eeeeee;
   width: 50px;
-  height: 15px;
   border: none;
   border-radius: 6px;
   font-size: 10px;
@@ -97,7 +96,6 @@ button.expand{
   z-index: 1;
   background: #eeeeee;
   width: 80px;
-  height: 15px;
   border: none;
   border-radius: 6px;
   font-size: 10px;
@@ -109,7 +107,6 @@ button.expand{
   z-index: 1;
   background: #eeeeee;
   width: 80px;
-  height: 15px;
   border: none;
   border-radius: 6px;
   font-size: 10px;
